# espandora

./: .gitignore  .qoder-rules  CMakeLists.txt  DEVELOPMENT_PLAN.md  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/bsp_board/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/bsp_board/src/boards/: esp32_s3_box.c  esp32_s3_box_lite.c
main/: CMakeLists.txt  Kconfig.projbuild  constants.h  espandora.c  idf_component.yml  util.c  util.h
main/app/: app_sensor.c  app_sensor.h  app_sntp.c  app_sntp.h  app_sr.c  app_sr.h  app_sr_handler.c  app_wifi.c  ha_client.c  ha_client.h
main/gui/: ui_about_us.c  ui_book.c  ui_book.h  ui_book_read.c  ui_book_read.h  ui_boot_animate.c  ui_hint.c  ui_main.c  ui_main.h  ui_net_config.c  ui_ring.c  ui_ring.h  ui_sr.c
main/gui/font/: font_AnoxicSC_M_48.c  font_InSovietRussiaRegular_PeaE_24.c  font_InSovietRussiaRegular_PeaE_48.c  font_ZeroHour_48.c
main/gui/image/: esp_logo.c  esp_logo_tiny.c  esp_text.c  hand_down.c  hand_left.c  icon_about_us.c  icon_bilibili.c  icon_book.c  icon_box_lite.c  icon_network.c  icon_ring.c  icon_rmaker.c  logo_jiong.c  mic_logo.c
main/http/: http.c  http.h  http_server.c  http_server.h  time_sync.c
main/system/: mqtt.c  mqtt.h  settings.c  settings.h
spiffs/: a.txt  b.txt  c.txt  index.html
